@@ -10,6 +10,7 @@ connect_timeout: 15
 command_timeout: 0
 history_size: 100
 color: auto
+node_count: yes
 verbosity: 1
 #ssh_user: root
 #ssh_path: /usr/bin/ssh
