@@ -1,14 +1,15 @@
 .\" Man page generated from reStructeredText.
-.TH clush.conf 5 "2010-06-15" "1.3" "ClusterShell User Manual"
+.
+.TH CLUSH.CONF 5 "2010-12-14" "1.4" "ClusterShell User Manual"
 .SH NAME
 clush.conf \- Configuration file for clush
-
+.
 .nr rst2man-indent-level 0
 .
 .de1 rstReportMargin
 \\$1 \\n[an-margin]
 level \\n[rst2man-indent-level]
-level magin: \\n[rst2man-indent\\n[rst2man-indent-level]]
+level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 -
 \\n[rst2man-indent0]
 \\n[rst2man-indent1]
@@ -29,153 +30,128 @@ level magin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" new: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .in \\n[rst2man-indent\\n[rst2man-indent-level]]u
 ..
-
 .SH DESCRIPTION
-\fBclush\fP(1) obtains configuration options from the following sources in the
+.sp
+\fCclush\fP(1) obtains configuration options from the following sources in the
 following order:
-
 .INDENT 0.0
 .INDENT 3.5
 .INDENT 0.0
-
 .IP 1. 3
+.
 command\-line options
-
-
 .IP 2. 3
+.
 user configuration file (\fI~/.clush.conf\fP)
-
-
 .IP 3. 3
+.
 system\-wide configuration file (\fI/etc/clustershell/clush.conf\fP)
-
 .UNINDENT
 .UNINDENT
 .UNINDENT
+.sp
 For each parameter, the first obtained value will be used.
-
+.sp
 The configuration file has a format in the style of RFC 822 composed
 of one main section:
-
 .INDENT 0.0
-
 .TP
 .B Main
+.
 Program options definition
-
 .UNINDENT
-
 .SS [Main]
-Configuration parameters of the \fBMain\fP section are described below.
-
+.sp
+Configuration parameters of the \fCMain\fP section are described below.
 .INDENT 0.0
-
 .TP
 .B fanout
+.
 Size of the sliding window of ssh connectors.
-
-
 .TP
 .B connect_timeout
+.
 Timeout in seconds to allow a connection to establish. This parameter is
 passed to ssh. If set to \fI0\fP, no timeout occurs.
-
-
 .TP
 .B command_timeout
+.
 Timeout in seconds to allow a command to complete since the connection has
 been established. This parameter is passed to ssh.  In addition, the
 ClusterShell library ensures that any commands complete in less than
 ( connect_timeout + command_timeout ). If set to \fI0\fP, no timeout occurs.
-
-
 .TP
 .B history_size
+.
 Set the maximum number of history entries saved in the GNU readline history
 list. Negative values imply unlimited history file size.
-
-
 .TP
 .B color
-Whether to use ANSI colors to surround node or nodeset prefix/header with escape sequences to display them in color on the terminal. Valid arguments are \fBnever\fP, \fBalways\fP or \fBauto\fP (which use color if standard output/error refer to a terminal). Colors are set to [34m (blue foreground text) for stdout and [31m (red foreground text) for stderr, and cannot be modified.
-
-
+.
+Whether to use ANSI colors to surround node or nodeset prefix/header with escape sequences to display them in color on the terminal. Valid arguments are \fCnever\fP, \fCalways\fP or \fCauto\fP (which use color if standard output/error refer to a terminal). Colors are set to [34m (blue foreground text) for stdout and [31m (red foreground text) for stderr, and cannot be modified.
+.TP
+.B node_count
+.
+Should \fCclush\fP display additional (node count) information in buffer header? (\fIyes\fP/\fIno\fP)
 .TP
 .B verbosity
+.
 Set the verbosity level: \fI0\fP (quiet), \fI1\fP (default), \fI2\fP (verbose) or more (debug).
-
-
 .TP
 .B ssh_user
+.
 Set the ssh user to use for remote connection (default is to not specify).
-
-
 .TP
 .B ssh_path
+.
 Set the ssh binary path to use for remote connection (default is
 \fI/usr/bin/ssh\fP).
-
-
 .TP
 .B ssh_options
+.
 Set additional options to pass to the underlying ssh command.
-
 .UNINDENT
-
 .SH EXAMPLES
+.sp
 Simple configuration file.
-
-
 .SS \fIclush.conf\fP
-
+.nf
 [Main]
-.br
 fanout: 128
-.br
 connect_timeout: 15
-.br
 command_timeout: 0
-.br
 history_size: 100
-.br
 color: auto
-.br
+node_count: yes
 
-.br
-
-
+.fi
+.sp
 .SH FILES
 .INDENT 0.0
-
 .TP
 .B \fI~/.clush.conf\fP
+.sp
 This is the per\-user configuration file.
-
-
 .TP
 .B \fI/etc/clustershell/clush.conf\fP
+.sp
 System\-wide configuration file.
-
 .UNINDENT
-
 .SH HISTORY
-As of ClusterShell version 1.3, the \fBExternal\fP section has been removed
-from \fIclush.conf\fP.  External commands whose outputs were used by \fIclush`\fP
+.sp
+As of ClusterShell version 1.3, the \fCExternal\fP section has been removed
+from \fIclush.conf\fP.  External commands whose outputs were used by \fCclush\fP
 (\-a, \-g, \-X) are now handled by the library itself and defined in
-\fBgroups.conf\fP(5).
-
-
+\fCgroups.conf\fP(5).
 .SH SEE ALSO
-\fBclush\fP(1), \fBnodeset\fP(1), \fBgroups.conf\fP(5)
-
+.sp
+\fCclush\fP(1), \fCnodeset\fP(1), \fCgroups.conf\fP(5)
+.sp
 \fI\%http://clustershell.sourceforge.net/\fP
-
-
 .SH AUTHOR
 Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
-
 .SH COPYRIGHT
 CeCILL-C V1
-
-.\" Generated by docutils manpage writer on 2010-06-16 01:00.
+.\" Generated by docutils manpage writer.
 .\" 
+.
