@@ -1,3 +1,10 @@
+2010-12-14 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/Display.py: In buffer header (for -b/-B without -L), print node
+	count in brackets if > 1 and enabled by configuration (trac ticket #130).
+	
+	* CLI/Config.py: Add boolean node_count param (part of trac ticket #130).
+
 2010-12-08 S. Thiell <stephane.thiell@cea.fr>
 
 	* CLI/Nodeset.py: Support nodeset --split option (trac ticket #91).
